--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="css/plugins.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://kit.fontawesome.com/c77e6f3bca.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,21 +24,29 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-        <!-- Logo -->
-        <a class="logo" href="index.html"> <img src="img/logo_white.png" style="width: 250px;" > </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="icon-bar"><i class="ti-line-double"></i></span> </button>
-        <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">Sobre Nosotros</a></li>
-                <li class="nav-item"><a class="nav-link" href="services.html">Servicios</a></li>
-                <li class="nav-item"><a class="nav-link" href="projects.html">Proyectos</a></li>
-                <li class="nav-item"><a class="nav-link" href="gallery.html">Galeria</a></li>
-                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
-            </ul>
-        </div>
+            <!-- Logo -->
+            <a class="logo" href="index.html"> <img src="img/logo_white.png" style="width: 250px;"> </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="icon-bar"><i class="ti-line-double"></i></span> </button>
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item dropdown"><a class="nav-link" href="services.html">Servicios <i class="ti-angle-down"></i></a>
+                        <ul class="dropdown-menu last">
+                            <li class="dropdown-item"><a href="pricing.html">Interiorismo</a></li>
+                            <li class="dropdown-item"><a href="team.html">Paisajismo</a></li>
+                            <li class="dropdown-item"><a href="testimonials.html">Modelado</a></li>
+                            <li class="dropdown-item"><a href="testimonials.html">Colecciones</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="projects.html">Arte</a></li>
+                    <li class="nav-item"><a class="nav-link" href="projects.html">Proyectos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
     <!-- Slider -->
@@ -52,8 +61,8 @@
                                 <div class="o-hidden">
                                     <h1>Interiorismo</h1>
                                     <hr>
-                                    <p>Architecture viverra tellus nec massa dictum the euismoe.
-                                        <br>Curabitur viverra the posuere aukue velit.
+                                    <p>Buscamos transmitir diferentes sensaciones y mejorar la calidad de vida
+                                        <br>a traves de diseños esteticos y funcionales que crean experiencias unicas.
                                     </p>
                                 </div>
                             </div>
@@ -67,10 +76,26 @@
                         <div class="row">
                             <div class="col-md-7">
                                 <div class="o-hidden">
+                                    <h1>Modelado</h1>
+                                    <hr>
+                                    <p>Creamos e idealizamos visualizaciones realistas de los propotipos
+                                        <br>con personalización, expresión y atención al detalle.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-left item bg-img" data-overlay-dark="4" data-background="img/slider_paisajismo.jpg">
+                <div class="v-bottom caption">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-7">
+                                <div class="o-hidden">
                                     <h1>Paisajismo</h1>
                                     <hr>
-                                    <p>Architecture viverra tellus nec massa dictum the euismoe.
-                                        <br>Curabitur viverra the posuere aukue velit.
+                                    <p>Diseñamos, materializamos y conservamos distintos tipos
+                                        <br>de espacios exteriores y espacios verdes.
                                     </p>
                                 </div>
                             </div>
@@ -78,7 +103,7 @@
                     </div>
                 </div>
             </div>
-            <div class="text-left item bg-img" data-overlay-dark="3" data-background="img/slider.jpeg">
+            <div class="text-left item bg-img" data-overlay-dark="3" data-background="img/slider_arte2.jpg">
                 <div class="v-bottom caption">
                     <div class="container">
                         <div class="row">
@@ -86,8 +111,8 @@
                                 <div class="o-hidden">
                                     <h1>Arte</h1>
                                     <hr>
-                                    <p>Architecture viverra tellus nec massa dictum the euismoe.
-                                        <br>Curabitur viverra the posuere aukue velit.
+                                    <p>Composiciónes geométricas, elegantes y monocromáticas
+                                        <br>que aportan calma, elegancia y contemporaneidad.
                                     </p>
                                 </div>
                             </div>
@@ -111,9 +136,9 @@
                 <div class="row">
                     <div class="col-md-6 mb-30 animate-box" data-animate-effect="fadeInUp">
                         <h2 class="section-title">About <span>MB</span></h2>
-                        <p>Estudio de diseño dedicado a crear espacios y experiencias únicas a través de diversas disciplinas del diseño.</p>
-                        <p>Con base en Buenos Aires, asesoramos y creamos proyectos de interiorismo y paisajismo.</p>
-                        <p>Realizamos exposiciones de arte, donde mostramos las colecciones de obras  con una estética minimalista y contemporánea. </p>
+                        <p>Somos un estudio especializado en la realización y ejecución de proyectos de arquitectura interior, exterior, residencial y comercial.</p>
+                        <p>Con base en Buenos Aires. Reconocido por nuestro estilo único, elegante y contemporáneo.</p>
+                        <p>Ademas ofrecemos una exclusiva colección de obras de arte para elevar el estilo de multiples y diversos ambientes. </p>
                     </div>
                     <div class="col-md-6 animate-box" data-animate-effect="fadeInUp">
                         <div class="about-img">
@@ -136,35 +161,24 @@
                     <div class="col-md-12">
                         <div class="owl-carousel owl-theme">
                             <div class="item">
-                                <div class="position-re o-hidden"> <img src="img/1920x1128-1.jpg" alt=""> </div>
+                                <div class="position-re o-hidden"> <img class="projects-carousel" src="img/proyects/azucena/azucena_1.jpeg" alt=""> </div>
                                 <div class="con">
-                                    <h6><a href="cotton-house.html">Interior</a></h6>
-                                    <h5><a href="cotton-house.html">Cotton House</a></h5>
+                                    <h5><a href="cotton-house.html">Azucena</a></h5>
                                     <div class="line"></div> <a href="cotton-house.html"><i class="ti-arrow-right"></i></a>
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position-re o-hidden"> <img src="img/1920x1128-1.jpg" alt=""> </div>
+                                <div class="position-re o-hidden"> <img class="projects-carousel" src="img/proyects/devoto/devoto_1.jpeg" alt=""> </div>
                                 <div class="con">
-                                    <h6><a href="armada-center.html">Exterior</a></h6>
-                                    <h5><a href="armada-center.html">Armada Center</a></h5>
+                                    <h5><a href="armada-center.html">Devoto</a></h5>
                                     <div class="line"></div> <a href="armada-center.html"><i class="ti-arrow-right"></i></a>
                                 </div>
                             </div>
                             <div class="item">
-                                <div class="position-re o-hidden"> <img src="img/1920x1128-1.jpg" alt=""> </div>
+                                <div class="position-re o-hidden"> <img class="projects-carousel" src="img/proyects/fouba/fouba_2.jpeg" alt=""> </div>
                                 <div class="con">
-                                    <h6><a href="stonya-villa.html">Urban</a></h6>
-                                    <h5><a href="stonya-villa.html">Stonya Villa</a></h5>
+                                    <h5><a href="stonya-villa.html">Fouba</a></h5>
                                     <div class="line"></div> <a href="stonya-villa.html"><i class="ti-arrow-right"></i></a>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <div class="position-re o-hidden"> <img src="img/1920x1128-1.jpg" alt=""> </div>
-                                <div class="con">
-                                    <h6><a href="prime-hotel.html">Interior</a></h6>
-                                    <h5><a href="prime-hotel.html">Prime Hotel</a></h5>
-                                    <div class="line"></div> <a href="prime-hotel.html"><i class="ti-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -186,17 +200,17 @@
                             <a href="architecture.html"> <img src="img/icons/icon-2.png" alt="">
                                 <h5>Interiorismo</h5>
                                 <div class="line"></div>
-                                    <p>Architecture bibendum eros eget lacus the vulputate sit amet vehicuta nibhen ulicera in the vitae miss.</p>
+                                <p>Nuestros proyectos de interiorismo reflejan la identidad del cliente, cubren expectativas y necesidades integrando funcionalidad, estetica y arte.</p>
                                 <div class="numb">01</div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="item">
-                            <a href="interior-design.html"> <img src="img/icons/icon-1.png" alt="">
+                            <a href="interior-design.html"> <img src="img/icons/paisajismo_logo.png" alt="">
                                 <h5>Paisajismo</h5>
                                 <div class="line"></div>
-                                    <p>Architecture bibendum eros eget lacus the vulputate sit amet vehicuta nibhen ulicera in the vitae miss.</p>
+                                <p>Brindamos una solución integral a los espacios verdes con soporte técnico, conservación, tendencias y sustentabilidad.</p>
                                 <div class="numb">02</div>
                             </a>
                         </div>
@@ -206,17 +220,17 @@
                             <a href="urban-design.html"> <img src="img/icons/icon-3.png" alt="">
                                 <h5>Modelado</h5>
                                 <div class="line"></div>
-                                    <p>Architecture bibendum eros eget lacus the vulputate sit amet vehicuta nibhen ulicera in the vitae miss.</p>
+                                <p>Desarrollamos presentaciones bidimensionales y tridimensionales para entender en su máxima expresión el proyecto a realizar.</p>
                                 <div class="numb">03</div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="item">
-                            <a href="urban-design.html"> <img src="img/icons/art_1.png" style="margin-left: -12px;"alt="">
+                            <a href="urban-design.html"> <img src="img/icons/arte_logo.png" style="margin-left: -10px;" alt="">
                                 <h5>Arte</h5>
                                 <div class="line"></div>
-                                    <p>Architecture bibendum eros eget lacus the vulputate sit amet vehicuta nibhen ulicera in the vitae miss.</p>
+                                <p>Comercializamos y realizamos expocisiones de arte de nuestra colección de obras de arte con una estetica minimalista y contemporánea.</p>
                                 <div class="numb">04</div>
                             </a>
                         </div>
@@ -229,7 +243,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="section-title">Noticias <span>Actuales</span></h2>
+                        <h2 class="section-title">Nuestros <span>Escritos</span></h2>
                     </div>
                 </div>
                 <div class="row">
@@ -237,37 +251,37 @@
                         <div class="owl-carousel owl-theme">
                             <div class="item">
                                 <div class="position-re o-hidden"> <img src="img/1100x750.jpg" alt=""> </div>
-                                <div class="con"> 
+                                <div class="con">
                                     <span class="category">
-                                        <a href="blog.html">Architecture </a> -  20.12.2021
+                                        <a href="blog.html">Diseño </a> -  20.12.2021
                                     </span>
-                                    <h5><a href="post.html">Modern Architectural Structures</a></h5>
+                                    <h5><a href="post.html">Arquitectura</a></h5>
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="position-re o-hidden"> <img src="img/1100x750.jpg" alt=""> </div>
                                 <div class="con"> <span class="category">
-                                        <a href="blog.html">Interior</a> - 18.12.2021
+                                        <a href="blog.html">Arte</a> - 18.12.2021
                                     </span>
-                                    <h5><a href="post.html">Modernism in Architecture</a></h5>
+                                    <h5><a href="post.html">La obra de arte</a></h5>
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="position-re o-hidden"> <img src="img/1100x750.jpg" alt=""> </div>
                                 <div class="con"> <span class="category">
-                                        <a href="blog.html">Urban</a> - 16.12.2021
+                                        <a href="blog.html">Diseño</a> - 16.12.2021
                                     </span>
-                                    <h5><a href="post.html">Postmodern Architecture</a></h5>
+                                    <h5><a href="post.html">La arquitectura como comunicación</a></h5>
                                 </div>
                             </div>
                             <div class="item">
-                            <div class="position-re o-hidden"> <img src="img/1100x750.jpg" alt=""> </div>
-                            <div class="con"> <span class="category">
-                                    <a href="blog.html">Planing</a> - 14.12.2021
+                                <div class="position-re o-hidden"> <img src="img/1100x750.jpg" alt=""> </div>
+                                <div class="con"> <span class="category">
+                                    <a href="blog.html">Diseño</a> - 14.12.2021
                                 </span>
-                                <h5><a href="post.html">Modern Architecture Buildings</a></h5>
+                                    <h5><a href="post.html">Visual merchandising</a></h5>
+                                </div>
                             </div>
-                        </div>
                         </div>
                     </div>
                 </div>
@@ -395,15 +409,14 @@
                         <div class="item fotcont">
                             <div class="fothead">
                                 <div class="abot">
-                                    <div class="social-icon"> 
-                                        <a href="index.html"><i class="ti-facebook"></i></a> 
-                                        <a href="index.html"><i class="ti-twitter"></i></a> 
-                                        <a href="index.html"><i class="ti-instagram"></i></a> 
-                                        <a href="index.html"><i class="ti-pinterest"></i></a> 
+                                    <div class="social-icon">
+                                        <a href="https://www.facebook.com/maxbilottidesignstudio" target="_blank"><i class="ti-facebook"></i></a>
+                                        <a href="https://wa.me/5491134392501?text=Hola!,%20necesitaria%20asesoramiento%20especializado." target="_blank"><i class="fa fa-whatsapp"></i></a>
+                                        <a href="https://www.instagram.com/mb.designstudio/" target="_blank"><i class="ti-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
-                            
+
                         </div>
                     </div>
                 </div>
@@ -439,4 +452,5 @@
     <script src="js/YouTubePopUp.js"></script>
     <script src="js/custom.js"></script>
 </body>
+
 </html>
