Normalizacion de modelo

--- a/collections.html
+++ b/collections.html
@@ -37,7 +37,7 @@
                         <ul class="dropdown-menu last">
                             <li class="dropdown-item"><a href="interior-design.html">Interiorismo</a></li>
                             <li class="dropdown-item"><a href="landscaping.html">Paisajismo</a></li>
-                            <li class="dropdown-item"><a href="collections.html">Colecciones</a></li>
+                            <li class="dropdown-item active"><a href="collections.html">Colecciones</a></li>
                             <li class="dropdown-item"><a href="planning.html">Planing</a></li>
                             <li class="dropdown-item"><a href="3d-modelling.html">Modelado 3D</a></li>
                             <li class="dropdown-item"><a href="decor-plan.html">Decor Plan</a></li>
@@ -75,80 +75,100 @@
             </div>
         </section>
         <!-- Header Banner -->
-        <section class="banner-header banner-img valign bg-img bg-fixed" data-overlay-darkgray="5" data-background="img/1920x1128.jpg"></section>
-        <!-- Services -->
-        <section class="services section-padding2">
+        <section class="banner-header banner-img valign bg-img bg-fixed" data-overlay-darkgray="5" data-background="img/1920x1128.jpg">
+
+
+        </section>
+        <!-- Services Page -->
+        <section class="section-padding2">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 animate-box" data-animate-effect="fadeInUp">
-                        <h2 class="section-title">Nuestros <span>Servicios</span></h2>
+                    <div class="col-md-12">
+                        <h2 class="section-title2">Colecciones</h2>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="item">
-                            <a href="interior-design.html"> <img src="img/icons/icon-2.png" alt="">
-                                <h5>Interiorismo</h5>
-                                <div class="line"></div>
-                                <p>Nuestros proyectos de interiorismo reflejan la identidad del cliente, cubren expectativas y necesidades integrando funcionalidad, estetica y arte.</p>
-                                <div class="numb">01</div>
-                            </a>
+                    <div class="col-md-8">
+                        <p>Urban design non lorem ac erat suscipit bibendum. Nulla facilisi sedeuter nunc volutpat molli sapien veconseyer turpeutionyer masin libero sempe. Fusceler mollis augue sit amet hendrerit vestibulum. Duisteyerionyer venenatis lacus.</p>
+                        <p>Villa gravida eros ut turpis interdum ornare. Interdum et malesu they adamale fames ac anteipsun pimsinefaucibus urabitur arcu site feugiat in volutpat.</p>
+                        <div class="row mb-30">
+                            <div class="col-md-6 gallery-item">
+                                <a href="img/1100x750.jpg" title="Urban Design" class="img-zoom">
+                                    <div class="gallery-box">
+                                        <div class="gallery-img"> <img src="img/1100x750.jpg" class="img-fluid mx-auto d-block" alt="work-img"> </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-md-6 gallery-item">
+                                <a href="img/1100x750.jpg" title="Urban Design" class="img-zoom">
+                                    <div class="gallery-box">
+                                        <div class="gallery-img"> <img src="img/1100x750.jpg" class="img-fluid mx-auto d-block" alt="work-img"> </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-md-12 gallery-item">
+                                <a href="img/1100x750.jpg" title="Urban Design" class="img-zoom">
+                                    <div class="gallery-box">
+                                        <div class="gallery-img"> <img src="img/1100x750.jpg" class="img-fluid mx-auto d-block" alt="work-img"> </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-md-6 gallery-item">
+                                <a href="img/1100x750.jpg" title="Architecture" class="img-zoom">
+                                    <div class="gallery-box">
+                                        <div class="gallery-img"> <img src="img/1100x750.jpg" class="img-fluid mx-auto d-block" alt="work-img"> </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-md-6 gallery-item">
+                                <a href="img/1100x750.jpg" title="Architecture" class="img-zoom">
+                                    <div class="gallery-box">
+                                        <div class="gallery-img"> <img src="img/1100x750.jpg" class="img-fluid mx-auto d-block" alt="work-img"> </div>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="item">
-                            <a href="landscaping.html"> <img src="img/icons/paisajismo_logo.png" alt="">
-                                <h5>Paisajismo</h5>
-                                <div class="line"></div>
-                                <p>Brindamos una solución integral a los espacios verdes con soporte técnico, conservación, tendencias y sustentabilidad.</p>
-                                <div class="numb">02</div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="item">
-                            <a href="collections.html"> <img src="img/icons/icon_collections.png" style="height: 42px;" alt="">
-                                <h5>Colecciones</h5>
-                                <div class="line"></div>
-                                <p>Una exclusiva colección de objetos seleccionados a partir de una estrategica curadoría de diseñadores expertos.</p>
-                                <div class="numb">03</div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="item">
-                            <a href="planning.html"> <img src="img/icons/icon-4.png" alt="">
-                                <h5>Planing</h5>
-                                <div class="line"></div>
-                                <p>Desde la idea rectora, anteproyecto, proyecto, dirección de obra y documentación de la misma.</p>
-                                <div class="numb">04</div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="item">
-                            <a href="3d-modelling.html"> <img src="img/icons/icon-6.png" alt="">
-                                <h5>Modelado 3D</h5>
-                                <div class="line"></div>
-                                <p>Desde el planeamiento mental hasta plasmar digitalmente la idea para un mejor entendimiento de como será el proyecto a ejecutar.</p>
-                                <div class="numb">05</div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="item">
-                            <a href="decor-plan.html"> <img src="img/icons/icon-5.png" alt="">
-                                <h5>Decor Plan</h5>
-                                <div class="line"></div>
-                                <p>Selección de estilismo, distribución, paleta de colores, componentes y mobiliario bajo el asesoriamiento de diseñadores expertos.</p>
-                                <div class="numb">06</div>
-                            </a>
-                        </div>
+                    <div class="col-md-4 sidebar-side">
+                        <aside class="sidebar blog-sidebar">
+                            <div class="sidebar-widget services">
+                                <div class="widget-inner">
+                                    <div class="sidebar-title">
+                                        <h4>Todos los Servicios</h4>
+                                    </div>
+                                    <ul>
+                                        <li><a href="interior-design.html">Interiorismo</a></li>
+                                        <li><a href="landscaping.html">Paisajismo</a></li>
+                                        <li class="active"><a href="collections.html">Colecciones</a></li>
+                                        <li><a href="planning.html">Planning</a></li>
+                                        <li><a href="3d-modelling.html">Modelado 3D</a></li>
+                                        <li><a href="decor-plan.html">Decor Plan</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </aside>
+                        <aside class="sidebar blog-sidebar mt-50">
+                            <div class="sidebar-widget services">
+                                <div class="widget-inner">
+                                    <div class="sidebar-title">
+                                        <h4>Proyectos de Colecciones</h4>
+                                    </div>
+                                    <ul>
+                                        <li><a href="armada-center.html">Chile</a></li>
+                                        <li><a href="cotton-house.html">Devoto</a></li>
+                                        <li><a href="prime-hotel.html">Fouba</a></li>
+                                        <li><a href="stonya-villa.html">Adrogue</a></li>
+                                        <li><a href="collections-projects.html">Ver Todos</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </aside>
                     </div>
                 </div>
+
             </div>
         </section>
-        <!-- Promo video - Testiominals -->
+        <!-- Footer -->
         <section class="testimonials">
             <div class="background bg-img bg-fixed section-padding pb-0" data-background="img/1920x1128.jpg" data-overlay-dark="3">
                 <div class="container">
