--- a/decor-plan-projects.html
+++ b/decor-plan-projects.html
@@ -33,7 +33,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"></li>
-                    <li class="nav-item dropdown"><a class="nav-link active" href="services.html">Servicios <i class="ti-angle-down"></i></a>
+                    <li class="nav-item dropdown"><a class="nav-link" href="services.html">Servicios <i class="ti-angle-down"></i></a>
                         <ul class="dropdown-menu last">
                             <li class="dropdown-item"><a href="interior-design.html">Interiorismo</a></li>
                             <li class="dropdown-item"><a href="landscaping.html">Paisajismo</a></li>
@@ -44,14 +44,14 @@
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="art.html">Arte</a></li>
-                    <li class="nav-item dropdown"><a class="nav-link" href="projects.html">Proyectos <i class="ti-angle-down"></i></a>
+                    <li class="nav-item dropdown"><a class="nav-link active" href="projects.html">Proyectos <i class="ti-angle-down"></i></a>
                         <ul class="dropdown-menu last">
                             <li class="dropdown-item"><a href="interior-design-projects.html">Interiorismo</a></li>
                             <li class="dropdown-item"><a href="landscaping-projects.html">Paisajismo</a></li>
                             <li class="dropdown-item"><a href="collections-projects.html">Colecciones</a></li>
                             <li class="dropdown-item"><a href="planing-projects.html">Planing</a></li>
                             <li class="dropdown-item"><a href="3d-modelling-projects.html">Modelado 3D</a></li>
-                            <li class="dropdown-item"><a href="decor-plan-projects.html">Decor Plan</a></li>
+                            <li class="dropdown-item active"><a href="decor-plan-projects.html">Decor Plan</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown"><a class="nav-link" href="blog.html">Blog <i class="ti-angle-down"></i></a>
@@ -75,74 +75,56 @@
             </div>
         </section>
         <!-- Header Banner -->
-        <section class="banner-header banner-img valign bg-img bg-fixed" data-overlay-darkgray="5" data-background="img/1920x1128.jpg"></section>
-        <!-- Services -->
-        <section class="services section-padding2">
+        <section class="banner-header banner-img bg-img bg-fixed pb-0" data-background="img/1920x1128.jpg" data-overlay-darkgray="5">
+
+
+        </section>
+        <!-- Projects -->
+        <section class="projects section-padding2">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 animate-box" data-animate-effect="fadeInUp">
-                        <h2 class="section-title">Nuestros <span>Servicios</span></h2>
+                    <div class="col-md-6 animate-box" data-animate-effect="fadeInUp">
+                        <h2 class="section-title">Nuestros <span>Projectos</span></h2>
+                    </div>
+                    <div class="col-3 ml-auto mr-0">
+                        <h6 class="section-title2"><span style="font-size: 25px;">Decor Plan</span></h6>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-6 animate-box" data-animate-effect="fadeInUp">
                         <div class="item">
-                            <a href="interior-design.html"> <img src="img/icons/icon-2.png" alt="">
-                                <h5>Interiorismo</h5>
-                                <div class="line"></div>
-                                <p>Nuestros proyectos de interiorismo reflejan la identidad del cliente, cubren expectativas y necesidades integrando funcionalidad, estetica y arte.</p>
-                                <div class="numb">01</div>
-                            </a>
+                            <div class="position-re o-hidden"> <img src="img/1920x1128-1.jpg" alt=""> </div>
+                            <div class="con">
+                                <h5><a href="cotton-house.html">Cotton House</a></h5>
+                                <div class="line"></div> <a href="cotton-house.html"><i class="ti-arrow-right"></i></a>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6 animate-box" data-animate-effect="fadeInUp">
                         <div class="item">
-                            <a href="landscaping.html"> <img src="img/icons/paisajismo_logo.png" alt="">
-                                <h5>Paisajismo</h5>
-                                <div class="line"></div>
-                                <p>Brindamos una solución integral a los espacios verdes con soporte técnico, conservación, tendencias y sustentabilidad.</p>
-                                <div class="numb">02</div>
-                            </a>
+                            <div class="position-re o-hidden"> <img src="img/1920x1128-1.jpg" alt=""> </div>
+                            <div class="con">
+                                <h5><a href="armada-center.html">Armada Center</a></h5>
+                                <div class="line"></div> <a href="armada-center.html"><i class="ti-arrow-right"></i></a>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6 animate-box" data-animate-effect="fadeInUp">
                         <div class="item">
-                            <a href="collections.html"> <img src="img/icons/icon_collections.png" style="height: 42px;" alt="">
-                                <h5>Colecciones</h5>
-                                <div class="line"></div>
-                                <p>Una exclusiva colección de objetos seleccionados a partir de una estrategica curadoría de diseñadores expertos.</p>
-                                <div class="numb">03</div>
-                            </a>
+                            <div class="position-re o-hidden"> <img src="img/1920x1128-1.jpg" alt=""> </div>
+                            <div class="con">
+                                <h5><a href="stonya-villa.html">Stonya Villa</a></h5>
+                                <div class="line"></div> <a href="stonya-villa.html"><i class="ti-arrow-right"></i></a>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6 animate-box" data-animate-effect="fadeInUp">
                         <div class="item">
-                            <a href="planning.html"> <img src="img/icons/icon-4.png" alt="">
-                                <h5>Planing</h5>
-                                <div class="line"></div>
-                                <p>Desde la idea rectora, anteproyecto, proyecto, dirección de obra y documentación de la misma.</p>
-                                <div class="numb">04</div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="item">
-                            <a href="3d-modelling.html"> <img src="img/icons/icon-6.png" alt="">
-                                <h5>Modelado 3D</h5>
-                                <div class="line"></div>
-                                <p>Desde el planeamiento mental hasta plasmar digitalmente la idea para un mejor entendimiento de como será el proyecto a ejecutar.</p>
-                                <div class="numb">05</div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="item">
-                            <a href="decor-plan.html"> <img src="img/icons/icon-5.png" alt="">
-                                <h5>Decor Plan</h5>
-                                <div class="line"></div>
-                                <p>Selección de estilismo, distribución, paleta de colores, componentes y mobiliario bajo el asesoriamiento de diseñadores expertos.</p>
-                                <div class="numb">06</div>
-                            </a>
+                            <div class="position-re o-hidden"> <img src="img/1920x1128-1.jpg" alt=""> </div>
+                            <div class="con">
+                                <h5><a href="prime-hotel.html">Prime Hotel</a></h5>
+                                <div class="line"></div> <a href="prime-hotel.html"><i class="ti-arrow-right"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
