--- a/post.html
+++ b/post.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>B A U E N</title>
-    <link rel="shortcut icon" href="img/favicon.png" />
+    <title>MB Design Studio</title>
+    <link rel="shortcut icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="css/plugins.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://kit.fontawesome.com/c77e6f3bca.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,31 +24,46 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-        <!-- Logo -->
-        <a class="logo" href="index.html"> <img src="img/logo.png" alt=""> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="icon-bar"><i class="ti-line-double"></i></span> </button>
-        <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                <li class="nav-item dropdown"> <span class="nav-link"> Pages <i class="ti-angle-down"></i></span>
-                    <ul class="dropdown-menu last">
-                        <li class="dropdown-item"><a href="pricing.html">Pricing</a></li>
-                        <li class="dropdown-item"><a href="team.html">Team</a></li>
-                        <li class="dropdown-item"><a href="testimonials.html">Testimonials</a></li>
-                        <li class="dropdown-item"><a href="faqs.html">Faqs</a></li>
-                        <li class="dropdown-item"><a href="gallery.html">Gallery</a></li>
-                        <li class="dropdown-item"><a href="video-gallery.html">Video Gallery</a></li>
-                        <li class="dropdown-item"><a href="not-found-404.html">404 Page</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item"><a class="nav-link active" href="blog.html">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-            </ul>
-        </div>
+            <!-- Logo -->
+            <a class="logo" href="index.html"> <img src="img/logo_white.png" style="width: 250px;"> </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="icon-bar"><i class="ti-line-double"></i></span> </button>
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item dropdown"><a class="nav-link" href="services.html">Servicios <i class="ti-angle-down"></i></a>
+                        <ul class="dropdown-menu last">
+                            <li class="dropdown-item"><a href="interior-design.html">Interiorismo</a></li>
+                            <li class="dropdown-item"><a href="landscaping.html">Paisajismo</a></li>
+                            <li class="dropdown-item"><a href="collections.html">Colecciones</a></li>
+                            <li class="dropdown-item"><a href="planning.html">Planing</a></li>
+                            <li class="dropdown-item"><a href="3d-modelling.html">Modelado 3D</a></li>
+                            <li class="dropdown-item"><a href="decor-plan.html">Decor Plan</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="art.html">Arte</a></li>
+                    <li class="nav-item dropdown"><a class="nav-link" href="projects.html">Proyectos <i class="ti-angle-down"></i></a>
+                        <ul class="dropdown-menu last">
+                            <li class="dropdown-item"><a href="interior-design-projects.html">Interiorismo</a></li>
+                            <li class="dropdown-item"><a href="landscaping-projects.html">Paisajismo</a></li>
+                            <li class="dropdown-item"><a href="collections-projects.html">Colecciones</a></li>
+                            <li class="dropdown-item"><a href="planing-projects.html">Planing</a></li>
+                            <li class="dropdown-item"><a href="3d-modelling-projects.html">Modelado 3D</a</a></li>
+                            <li class="dropdown-item"><a href="decor-plan-projects.html">Decor Plan</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown"><a class="nav-link active" href="blog.html">Blog <i class="ti-angle-down"></i></a>
+                        <ul class="dropdown-menu last">
+                            <li class="dropdown-item"><a href="interior-design-blog.html">Diseño</a></li>
+                            <li class="dropdown-item"><a href="art-blog.html">Arte</a></li>
+                            <li class="dropdown-item"><a href="personal-blog.html">Personal</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
     <!-- Content -->
@@ -68,8 +84,11 @@
                     <div class="col-md-12">
                         <img src="img/1920x1128-1.jpg" class="mb-30" alt="">
                         <h2 class="section-title2">Modern Architectural Structures</h2>
-                        <p>Quisque pretium fermentum quam, sit amet cursus ante sollicitudin vel. Morbi consequat risus consequat, porttitor orci sit amet, iaculis nisl. Integer quis sapien nec elit ultrices euismod sit amet id lacus. Sed a imperdiet erat. Duis eu est dignissim lacus dictum hendrerit quis vitae mi. Fusce eu nulla ac nisi cursus tincidunt. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer tristique sem eget leo faucibus porttitor. Suspendisse sagittis, magna sed varius iaculis tellus tortor non neque.</p>
-                        <p>Nulla vitae metus tincidunt, varius nunc quis, porta nulla. Pellentesque vel dui nec libero auctor pretium id sed arcu. Nunc consequat diam id nisl blandit dignissim. Etiam commodo diam dolor, at scelerisque sem finibus sit amet. Curabitur id lectus eget purus finibus laoreet. Nam eget lectus ac sem luctus hendrerit sed nec magna. Maecenas vulputate magna sed nunc pellentesque, in consectetur nisi condimentum.</p>
+                        <p>Quisque pretium fermentum quam, sit amet cursus ante sollicitudin vel. Morbi consequat risus consequat, porttitor orci sit amet, iaculis nisl. Integer quis sapien nec elit ultrices euismod sit amet id lacus. Sed a imperdiet erat.
+                            Duis eu est dignissim lacus dictum hendrerit quis vitae mi. Fusce eu nulla ac nisi cursus tincidunt. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer tristique sem eget leo faucibus porttitor. Suspendisse
+                            sagittis, magna sed varius iaculis tellus tortor non neque.</p>
+                        <p>Nulla vitae metus tincidunt, varius nunc quis, porta nulla. Pellentesque vel dui nec libero auctor pretium id sed arcu. Nunc consequat diam id nisl blandit dignissim. Etiam commodo diam dolor, at scelerisque sem finibus sit amet.
+                            Curabitur id lectus eget purus finibus laoreet. Nam eget lectus ac sem luctus hendrerit sed nec magna. Maecenas vulputate magna sed nunc pellentesque, in consectetur nisi condimentum.</p>
                     </div>
                 </div>
                 <div class="bauen-comment-section">
@@ -77,28 +96,28 @@
                         <!-- Comment -->
                         <div class="col-md-7">
                             <div class="bauen-post-comment-wrap">
-                                <div class="bauen-user-comment"> <img src="img/600x600.jpg" alt=""> </div>
+                                <div class="bauen-user-comment"> <img src="img/team/max_bilotti.jpg" alt=""> </div>
                                 <div class="bauen-user-content">
-                                    <h3>Robert Misse<span> 29 October 2021</span></h3>
-                                    <p>Photography ultricies nibh non dolor maximus sceleue inte molliser faubs neque nec tincidunte aliquam erat volutpat. Praeser tempor malade yap. </p> <a class="bauen-repay" href="#">Reply<i class="ti-back-left"></i></a>
+                                    <h3>Maximiliano Bilotti<span> 29 October 2021</span></h3>
+                                    <p>Photography ultricies nibh non dolor maximus sceleue inte molliser faubs neque nec tincidunte aliquam erat volutpat. Praeser tempor malade yap. </p> <a class="bauen-repay" href="#">Responder<i class="ti-back-left"></i></a>
                                 </div>
                             </div>
                         </div>
                         <!-- Contact Form -->
                         <div class="col-md-4 offset-md-1">
-                            <h3>Leave a Reply</h3>
+                            <h3>Deja un Comentario</h3>
                             <form method="post" class="row">
                                 <div class="col-md-12">
-                                    <input type="text" name="name" id="name" placeholder="Full Name *" required="">
+                                    <input type="text" name="name" id="name" placeholder="Nombre Completo *" required="">
                                 </div>
                                 <div class="col-md-12">
-                                    <input type="email" name="email" id="email" placeholder="Email Address *" required="">
+                                    <input type="email" name="email" id="email" placeholder="Email *" required="">
                                 </div>
                                 <div class="col-md-12">
-                                    <textarea name="message" id="message" cols="40" rows="4" placeholder="Your Comment *" required=""></textarea>
+                                    <textarea name="message" id="message" cols="40" rows="4" placeholder="Su Comentario *" required=""></textarea>
                                 </div>
                                 <div class="col-md-12">
-                                    <button class="butn-dark mt-15"><a href="#0"><span>Send</span></a></button>
+                                    <button class="butn-dark mt-15"><a href="#0"><span>Enviar</span></a></button>
                                 </div>
                             </form>
                         </div>
@@ -107,31 +126,47 @@
             </div>
         </section>
         <!-- Footer -->
+        <section class="testimonials">
+            <div class="background bg-img bg-fixed section-padding pb-0" data-background="img/1920x1128.jpg" data-overlay-dark="3">
+                <div class="container">
+                    <div class="row justify-content-center">
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer class="main-footer dark">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 mb-30">
-                        <div class="item fotcont">
-                            <div class="fothead">
-                                <h6>Phone</h6>
-                            </div>
-                            <p>+1 203-123-0606</p>
+                        <div class="item fotcont justify-content-center" style="display: flex;">
+                            <img src="img/logo_2.png" alt="" style="width: 50%;">
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
                         <div class="item fotcont">
                             <div class="fothead">
-                                <h6>Email</h6>
+                                <h4>CONTACTO</h4>
                             </div>
-                            <p>architecture@bauen.com</p>
+                            <div class="fotbody">
+                                <h6>Telefono: </h6>
+                                <p style="font-size: 14px;">+54 9 11-1234-5678</p>
+                                <h6>Email: </h6>
+                                <p style="font-size: 14px;">maxbilotti.designstudio@gmail.com</p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
                         <div class="item fotcont">
                             <div class="fothead">
-                                <h6>Our Address</h6>
+                                <div class="abot">
+                                    <div class="social-icon">
+                                        <a href="https://www.facebook.com/maxbilottidesignstudio" target="_blank"><i class="ti-facebook"></i></a>
+                                        <a href="https://wa.me/5491134392501?text=Hola!,%20necesitaria%20asesoramiento%20especializado." target="_blank"><i class="fa fa-whatsapp"></i></a>
+                                        <a href="https://www.instagram.com/mb.designstudio/" target="_blank"><i class="ti-instagram"></i></a>
+                                    </div>
+                                </div>
                             </div>
-                            <p>24 King St, Charleston, SC 29401 USA</p>
+
                         </div>
                     </div>
                 </div>
@@ -141,19 +176,11 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="text-left">
-                                <p>© 2021 Bauen. All right reserved.</p>
+                                <p>© 2021 MB Design Studio. All right reserved.</p>
                             </div>
                         </div>
-                        <div class="col-md-4 abot">
-                            <div class="social-icon">
-                                <a href="index.html"><i class="ti-facebook"></i></a>
-                                <a href="index.html"><i class="ti-twitter"></i></a>
-                                <a href="index.html"><i class="ti-instagram"></i></a>
-                                <a href="index.html"><i class="ti-pinterest"></i></a>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <p class="right"><a href="#">Terms &amp; Conditions</a></p>
+                        <div class="col-md-8 float-right">
+                            <p class="right"><a href="#">Terminos &amp; Condiciones</a></p>
                         </div>
                     </div>
                 </div>
