--- a/art.html
+++ b/art.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>B A U E N</title>
-    <link rel="shortcut icon" href="img/favicon.png" />
+    <title>MB Design Studio</title>
+    <link rel="shortcut icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="css/plugins.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://kit.fontawesome.com/c77e6f3bca.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,31 +24,46 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-        <!-- Logo -->
-        <a class="logo" href="index.html"> <img src="img/logo.png" alt=""> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="icon-bar"><i class="ti-line-double"></i></span> </button>
-        <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                <li class="nav-item dropdown"> <span class="nav-link active"> Pages <i class="ti-angle-down"></i></span>
-                    <ul class="dropdown-menu last">
-                        <li class="dropdown-item active"><a href="pricing.html">Pricing</a></li>
-                        <li class="dropdown-item"><a href="team.html">Team</a></li>
-                        <li class="dropdown-item"><a href="testimonials.html">Testimonials</a></li>
-                        <li class="dropdown-item"><a href="faqs.html">Faqs</a></li>
-                        <li class="dropdown-item"><a href="gallery.html">Gallery</a></li>
-                        <li class="dropdown-item"><a href="video-gallery.html">Video Gallery</a></li>
-                        <li class="dropdown-item"><a href="not-found-404.html">404 Page</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-            </ul>
-        </div>
+            <!-- Logo -->
+            <a class="logo" href="index.html"> <img src="img/logo_white.png" style="width: 250px;"> </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="icon-bar"><i class="ti-line-double"></i></span> </button>
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item dropdown"><a class="nav-link" href="services.html">Servicios <i class="ti-angle-down"></i></a>
+                        <ul class="dropdown-menu last">
+                            <li class="dropdown-item"><a href="interior-design.html">Interiorismo</a></li>
+                            <li class="dropdown-item"><a href="landscaping.html">Paisajismo</a></li>
+                            <li class="dropdown-item"><a href="collections.html">Colecciones</a></li>
+                            <li class="dropdown-item"><a href="planning.html">Planing</a></li>
+                            <li class="dropdown-item"><a href="3d-modelling.html">Modelado 3D</a></li>
+                            <li class="dropdown-item"><a href="decor-plan.html">Decor Plan</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link active" href="art.html">Arte</a></li>
+                    <li class="nav-item dropdown"><a class="nav-link" href="projects.html">Proyectos <i class="ti-angle-down"></i></a>
+                        <ul class="dropdown-menu last">
+                            <li class="dropdown-item"><a href="interior-design-projects.html">Interiorismo</a></li>
+                            <li class="dropdown-item"><a href="landscaping-projects.html">Paisajismo</a></li>
+                            <li class="dropdown-item"><a href="collections-projects.html">Colecciones</a></li>
+                            <li class="dropdown-item"><a href="planing-projects.html">Planing</a></li>
+                            <li class="dropdown-item"><a href="3d-modelling-projects.html">Modelado 3D</a</a</a></li>
+                            <li class="dropdown-item"><a href="decor-plan-projects.html">Decor Plan</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown"><a class="nav-link" href="blog.html">Blog <i class="ti-angle-down"></i></a>
+                        <ul class="dropdown-menu last">
+                            <li class="dropdown-item"><a href="interior-design-blog.html">Diseño</a></li>
+                            <li class="dropdown-item"><a href="art-blog.html">Arte</a></li>
+                            <li class="dropdown-item"><a href="personal-blog.html">Personal</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
     <!-- Content -->
@@ -60,8 +76,8 @@
         </section>
         <!-- Header Banner -->
         <section class="banner-header banner-img valign bg-img bg-fixed" data-overlay-darkgray="5" data-background="img/1920x1128.jpg">
-            
-            
+
+
         </section>
         <!-- Pricing -->
         <section class="section-padding2">
