--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>B A U E N</title>
-    <link rel="shortcut icon" href="img/favicon.png" />
+    <title>MB Design Studio</title>
+    <link rel="shortcut icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="css/plugins.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://kit.fontawesome.com/c77e6f3bca.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,31 +24,46 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-        <!-- Logo -->
-        <a class="logo" href="index.html"> <img src="img/logo.png" alt=""> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="icon-bar"><i class="ti-line-double"></i></span> </button>
-        <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                <li class="nav-item dropdown"> <span class="nav-link"> Pages <i class="ti-angle-down"></i></span>
-                    <ul class="dropdown-menu last">
-                        <li class="dropdown-item"><a href="pricing.html">Pricing</a></li>
-                        <li class="dropdown-item"><a href="team.html">Team</a></li>
-                        <li class="dropdown-item"><a href="testimonials.html">Testimonials</a></li>
-                        <li class="dropdown-item"><a href="faqs.html">Faqs</a></li>
-                        <li class="dropdown-item"><a href="gallery.html">Gallery</a></li>
-                        <li class="dropdown-item"><a href="video-gallery.html">Video Gallery</a></li>
-                        <li class="dropdown-item"><a href="not-found-404.html">404 Page</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
-            </ul>
-        </div>
+            <!-- Logo -->
+            <a class="logo" href="index.html"> <img src="img/logo_white.png" style="width: 250px;"> </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="icon-bar"><i class="ti-line-double"></i></span> </button>
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item dropdown"><a class="nav-link" href="services.html">Servicios <i class="ti-angle-down"></i></a>
+                        <ul class="dropdown-menu last">
+                            <li class="dropdown-item"><a href="interior-design.html">Interiorismo</a></li>
+                            <li class="dropdown-item"><a href="landscaping.html">Paisajismo</a></li>
+                            <li class="dropdown-item"><a href="collections.html">Colecciones</a></li>
+                            <li class="dropdown-item"><a href="planning.html">Planing</a></li>
+                            <li class="dropdown-item"><a href="3d-modelling.html">Modelado 3D</a></li>
+                            <li class="dropdown-item"><a href="decor-plan.html">Decor Plan</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="art.html">Arte</a></li>
+                    <li class="nav-item dropdown"><a class="nav-link" href="projects.html">Proyectos <i class="ti-angle-down"></i></a>
+                        <ul class="dropdown-menu last">
+                            <li class="dropdown-item"><a href="interior-design-projects.html">Interiorismo</a></li>
+                            <li class="dropdown-item"><a href="landscaping-projects.html">Paisajismo</a></li>
+                            <li class="dropdown-item"><a href="collections-projects.html">Colecciones</a></li>
+                            <li class="dropdown-item"><a href="planing-projects.html">Planing</a></li>
+                            <li class="dropdown-item"><a href="3d-modelling-projects.html">Modelado 3D</a</a</a></li>
+                            <li class="dropdown-item"><a href="decor-plan-projects.html">Decor Plan</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown"><a class="nav-link" href="blog.html">Blog <i class="ti-angle-down"></i></a>
+                        <ul class="dropdown-menu last">
+                            <li class="dropdown-item"><a href="interior-design-blog.html">Diseño</a></li>
+                            <li class="dropdown-item"><a href="art-blog.html">Arte</a></li>
+                            <li class="dropdown-item"><a href="personal-blog.html">Personal</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link active" href="contact.html">Contacto</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
     <!-- Content -->
@@ -60,51 +76,43 @@
         </section>
         <!-- Header Banner -->
         <section class="banner-header banner-img valign bg-img bg-fixed" data-overlay-darkgray="5" data-background="img/1920x1128.jpg">
-            
-            
+
+
         </section>
         <!-- Contact -->
         <section class="section-padding2">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 animate-box" data-animate-effect="fadeInUp">
-                        <h2 class="section-title">Contact <span>Us</span></h2>
+                        <h2 class="section-title">Contácte<span>nos</span></h2>
                     </div>
                 </div>
                 <div class="row mb-90">
                     <div class="col-md-4 mb-30 animate-box" data-animate-effect="fadeInUp">
-                        <p><b>Bauen Architecture Firm</b></p>
-                        <p>Our firm nisl sodales sit amet sapien idea placerat sodales orcite. Vivamus ne miss rhoncus felis bauen architecture.</p>
-                        <p><b>VAT :</b> USA002323065B06</p>
+                        <p><b>MB Design Studio</b></p>
+                        <p>Esperamos su contacto ante cualquier duda o consulta para que nuestro equipo de asesores especializados pueda ayudarlo.</p>
                     </div>
                     <div class="col-md-4 mb-30 animate-box" data-animate-effect="fadeInUp">
-                        <p><b>Contact Details</b></p>
-                        <p><b>Phone :</b> +1 203-123-0606</p>
-                        <p><b>Email :</b> architecture@bauen.com</p>
-                        <p><b>Address :</b> 24 King St, Charleston, 29401 USA</p>
+                        <p><b>Detalles de Contacto</b></p>
+                        <p><b>Telefono :</b> +1 203-123-0606</p>
+                        <p><b>Email :</b> maxbilotti.designstudio@gmail.com</p>
                     </div>
                     <div class="col-md-4 animate-box" data-animate-effect="fadeInUp">
-                        <p><b>Contact Form</b></p>
+                        <p><b>Formulario de Contacto</b></p>
                         <form method="post" class="row">
                             <div class="col-md-12">
-                                <input type="text" name="name" id="name" placeholder="Full Name">
+                                <input type="text" name="name" id="name" placeholder="Nombre Completo">
                             </div>
                             <div class="col-md-12">
-                                <input type="email" name="email" id="email" placeholder="Your Email" required="">
+                                <input type="email" name="email" id="email" placeholder="Email" required="">
                             </div>
                             <div class="col-md-12">
-                                <textarea name="message" id="message" cols="40" rows="4" placeholder="Your Message"></textarea>
+                                <textarea name="message" id="message" cols="40" rows="4" placeholder="Su Mensaje"></textarea>
                             </div>
                             <div class="col-md-12">
-                                <button class="butn-dark mt-15"><a href="#0"><span>Send</span></a></button>
+                                <button class="butn-dark mt-15"><a href="#0"><span>Enviar</span></a></button>
                             </div>
                         </form>
-                    </div>
-                </div>
-                <!-- Map Section-->
-                <div class="row">
-                    <div class="col-md-12 mb-30 animate-box" data-animate-effect="fadeInUp">
-                        <div id="bauen-contactMap"></div>
                     </div>
                 </div>
             </div>
@@ -114,97 +122,7 @@
         <section class="testimonials">
             <div class="background bg-img bg-fixed section-padding pb-0" data-background="img/1920x1128.jpg" data-overlay-dark="3">
                 <div class="container">
-                    <div class="row">
-                        <!-- Promo video -->
-                        <div class="col-md-6">
-                            <div class="vid-area">
-                                <div class="vid-icon">
-                                    <a class="play-button vid" href="https://youtu.be/RziCmLzpFNY">
-                                        <svg class="circle-fill">
-                                            <circle cx="43" cy="43" r="39" stroke="#fff" stroke-width=".5"></circle>
-                                        </svg>
-                                        <svg class="circle-track">
-                                            <circle cx="43" cy="43" r="39" stroke="none" stroke-width="1" fill="none"></circle>
-                                        </svg> <span class="polygon">
-                                            <i class="ti-control-play"></i>
-                                        </span> </a>
-                                </div>
-                                <div class="cont mt-15 mb-30">
-                                    <h5>View promo video</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Testiominals -->
-                        <div class="col-md-5 offset-md-1">
-                            <div class="testimonials-box animate-box" data-animate-effect="fadeInUp">
-                                <div class="head-box">
-
-                                    <h4>What Client's Say?</h4>
-                                </div>
-                                <div class="owl-carousel owl-theme">
-                                    <div class="item">
-                                        <span class="quote"><img src="img/quot.png" alt=""></span>
-                                        <p>Architect dapibus augue metus the nec feugiat erat hendrerit nec. Duis ve ante the lemon sanleo nec feugiat erat hendrerit necuis ve ante.</p>
-                                        <div class="info">
-                                            <div class="author-img"> <img src="img/600x600.jpg" alt=""> </div>
-                                            <div class="cont">
-                                                <h6>Jason Brown</h6> <span>Crowne Plaza Owner</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="item"> <span class="quote">
-                                            <img src="img/quot.png" alt="">
-                                        </span>
-                                        <p>Interior dapibus augue metus the nec feugiat erat hendrerit nec. Duis ve ante the lemon sanleo nec feugiat erat hendrerit necuis ve ante.</p>
-                                        <div class="info">
-                                            <div class="author-img"> <img src="img/600x600.jpg" alt=""> </div>
-                                            <div class="cont">
-                                                <h6>Emily White</h6> <span>Armada Owner</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="item"> <span class="quote">
-                                            <img src="img/quot.png" alt="">
-                                        </span>
-                                        <p>Urban dapibus augue metus the nec feugiat erat hendrerit nec. Duis ve ante the lemon sanleo nec feugiat erat hendrerit necuis ve ante.</p>
-                                        <div class="info">
-                                            <div class="author-img"> <img src="img/600x600.jpg" alt=""> </div>
-                                            <div class="cont">
-                                                <h6>Jesica Smith</h6> <span>Alsa Manager</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </section>
-        <!-- Clients -->
-        <section class="clients">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-7 owl-carousel owl-theme">
-                        <div class="clients-logo">
-                            <a href="#0"><img src="img/clients/1.png" alt=""></a>
-                        </div>
-                        <div class="clients-logo">
-                            <a href="#0"><img src="img/clients/2.png" alt=""></a>
-                        </div>
-                        <div class="clients-logo">
-                            <a href="#0"><img src="img/clients/3.png" alt=""></a>
-                        </div>
-                        <div class="clients-logo">
-                            <a href="#0"><img src="img/clients/4.png" alt=""></a>
-                        </div>
-                        <div class="clients-logo">
-                            <a href="#0"><img src="img/clients/5.png" alt=""></a>
-                        </div>
-                        <div class="clients-logo">
-                            <a href="#0"><img src="img/clients/6.png" alt=""></a>
-                        </div>
+                    <div class="row justify-content-center">
                     </div>
                 </div>
             </div>
@@ -214,27 +132,35 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 mb-30">
-                        <div class="item fotcont">
-                            <div class="fothead">
-                                <h6>Phone</h6>
-                            </div>
-                            <p>+1 203-123-0606</p>
+                        <div class="item fotcont justify-content-center" style="display: flex;">
+                            <img src="img/logo_2.png" alt="" style="width: 50%;">
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
                         <div class="item fotcont">
                             <div class="fothead">
-                                <h6>Email</h6>
+                                <h4>CONTACTO</h4>
                             </div>
-                            <p>architecture@bauen.com</p>
+                            <div class="fotbody">
+                                <h6>Telefono: </h6>
+                                <p style="font-size: 14px;">+54 9 11-1234-5678</p>
+                                <h6>Email: </h6>
+                                <p style="font-size: 14px;">maxbilotti.designstudio@gmail.com</p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-30">
                         <div class="item fotcont">
                             <div class="fothead">
-                                <h6>Our Address</h6>
+                                <div class="abot">
+                                    <div class="social-icon">
+                                        <a href="https://www.facebook.com/maxbilottidesignstudio" target="_blank"><i class="ti-facebook"></i></a>
+                                        <a href="https://wa.me/5491134392501?text=Hola!,%20necesitaria%20asesoramiento%20especializado." target="_blank"><i class="fa fa-whatsapp"></i></a>
+                                        <a href="https://www.instagram.com/mb.designstudio/" target="_blank"><i class="ti-instagram"></i></a>
+                                    </div>
+                                </div>
                             </div>
-                            <p>24 King St, Charleston, SC 29401 USA</p>
+
                         </div>
                     </div>
                 </div>
@@ -244,19 +170,11 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="text-left">
-                                <p>© 2021 Bauen. All right reserved.</p>
+                                <p>© 2021 MB Design Studio. All right reserved.</p>
                             </div>
                         </div>
-                        <div class="col-md-4 abot">
-                            <div class="social-icon">
-                                <a href="index.html"><i class="ti-facebook"></i></a>
-                                <a href="index.html"><i class="ti-twitter"></i></a>
-                                <a href="index.html"><i class="ti-instagram"></i></a>
-                                <a href="index.html"><i class="ti-pinterest"></i></a>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <p class="right"><a href="#">Terms &amp; Conditions</a></p>
+                        <div class="col-md-8 float-right">
+                            <p class="right"><a href="#">Terminos &amp; Condiciones</a></p>
                         </div>
                     </div>
                 </div>
