--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
@@ -35,15 +35,32 @@
                     <li class="nav-item"></li>
                     <li class="nav-item dropdown"><a class="nav-link" href="services.html">Servicios <i class="ti-angle-down"></i></a>
                         <ul class="dropdown-menu last">
-                            <li class="dropdown-item"><a href="pricing.html">Interiorismo</a></li>
-                            <li class="dropdown-item"><a href="team.html">Paisajismo</a></li>
-                            <li class="dropdown-item"><a href="testimonials.html">Modelado</a></li>
-                            <li class="dropdown-item"><a href="testimonials.html">Colecciones</a></li>
+                            <li class="dropdown-item"><a href="interior-design.html">Interiorismo</a></li>
+                            <li class="dropdown-item"><a href="landscaping.html">Paisajismo</a></li>
+                            <li class="dropdown-item"><a href="collections.html">Colecciones</a></li>
+                            <li class="dropdown-item"><a href="planning.html">Planing</a></li>
+                            <li class="dropdown-item"><a href="3d-modelling.html">Modelado 3D</a></li>
+                            <li class="dropdown-item"><a href="decor-plan.html">Decor Plan</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="projects.html">Arte</a></li>
-                    <li class="nav-item"><a class="nav-link" href="projects.html">Proyectos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="art.html">Arte</a></li>
+                    <li class="nav-item dropdown"><a class="nav-link" href="projects.html">Proyectos <i class="ti-angle-down"></i></a>
+                        <ul class="dropdown-menu last">
+                            <li class="dropdown-item"><a href="interior-design-projects.html">Interiorismo</a></li>
+                            <li class="dropdown-item"><a href="landscaping-projects.html">Paisajismo</a></li>
+                            <li class="dropdown-item"><a href="collections-projects.html">Colecciones</a></li>
+                            <li class="dropdown-item"><a href="planing-projects.html">Planing</a></li>
+                            <li class="dropdown-item"><a href="3d-modelling-projects.html">Modelado 3D</a></li>
+                            <li class="dropdown-item"><a href="decor-plan-projects.html">Decor Plan</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown"><a class="nav-link" href="blog.html">Blog <i class="ti-angle-down"></i></a>
+                        <ul class="dropdown-menu last">
+                            <li class="dropdown-item"><a href="interior-design-blog.html">Diseño</a></li>
+                            <li class="dropdown-item"><a href="art-blog.html">Arte</a></li>
+                            <li class="dropdown-item"><a href="personal-blog.html">Personal</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
                 </ul>
             </div>
@@ -197,7 +214,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="item">
-                            <a href="architecture.html"> <img src="img/icons/icon-2.png" alt="">
+                            <a href="interior-design.html"> <img src="img/icons/icon-2.png" alt="">
                                 <h5>Interiorismo</h5>
                                 <div class="line"></div>
                                 <p>Nuestros proyectos de interiorismo reflejan la identidad del cliente, cubren expectativas y necesidades integrando funcionalidad, estetica y arte.</p>
@@ -207,7 +224,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="item">
-                            <a href="interior-design.html"> <img src="img/icons/paisajismo_logo.png" alt="">
+                            <a href="landscaping.html"> <img src="img/icons/paisajismo_logo.png" alt="">
                                 <h5>Paisajismo</h5>
                                 <div class="line"></div>
                                 <p>Brindamos una solución integral a los espacios verdes con soporte técnico, conservación, tendencias y sustentabilidad.</p>
@@ -217,7 +234,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="item">
-                            <a href="urban-design.html"> <img src="img/icons/icon-3.png" alt="">
+                            <a href="3d-modelling.html"> <img src="img/icons/icon-6.png" alt="">
                                 <h5>Modelado</h5>
                                 <div class="line"></div>
                                 <p>Desarrollamos presentaciones bidimensionales y tridimensionales para entender en su máxima expresión el proyecto a realizar.</p>
@@ -227,7 +244,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="item">
-                            <a href="urban-design.html"> <img src="img/icons/arte_logo.png" style="margin-left: -10px;" alt="">
+                            <a href="art.html"> <img src="img/icons/arte_logo.png" style="margin-left: -10px;" alt="">
                                 <h5>Arte</h5>
                                 <div class="line"></div>
                                 <p>Comercializamos y realizamos expocisiones de arte de nuestra colección de obras de arte con una estetica minimalista y contemporánea.</p>
@@ -292,97 +309,10 @@
             <div class="background bg-img bg-fixed section-padding pb-0" data-background="img/1920x1128.jpg" data-overlay-dark="3">
                 <div class="container">
                     <div class="row justify-content-center">
-                        <!-- Promo video 
-                        <div class="col-md-6 justify-content-center" style="display: flex;">
-                            <div class="vid-area">
-                                <div class="vid-icon">
-                                    <a class="play-button vid" href="https://youtu.be/RziCmLzpFNY">
-                                        <svg class="circle-fill">
-                                            <circle cx="43" cy="43" r="39" stroke="#fff" stroke-width=".5"></circle>
-                                        </svg>
-                                        <svg class="circle-track">
-                                            <circle cx="43" cy="43" r="39" stroke="none" stroke-width="1" fill="none"></circle>
-                                        </svg> <span class="polygon">
-                                            <i class="ti-control-play"></i>
-                                        </span> </a>
-                                </div>
-                                <div class="cont mt-15 mb-30">
-                                    <h5>View promo video</h5>
-                                </div>
-                            </div>
-                        </div>-->
-                        <!-- Testiominals -->
-                        <!--<div class="col-md-5 offset-md-1">
-                            <div class="testimonials-box animate-box" data-animate-effect="fadeInUp">
-                                <div class="head-box">
-                                    <h4>What Client's Say?</h4>
-                                </div>
-                                <div class="owl-carousel owl-theme">
-                                    <div class="item"> <span class="quote"><img src="img/quot.png" alt=""></span>
-                                        <p>Architect dapibus augue metus the nec feugiat erat hendrerit nec. Duis ve ante the lemon sanleo nec feugiat erat hendrerit necuis ve ante.</p>
-                                        <div class="info">
-                                            <div class="author-img"> <img src="img/600x600.jpg" alt=""> </div>
-                                            <div class="cont">
-                                                <h6>Jason Brown</h6> <span>Crowne Plaza Owner</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="item"> <span class="quote">
-                                            <img src="img/quot.png" alt="">
-                                        </span>
-                                        <p>Interior dapibus augue metus the nec feugiat erat hendrerit nec. Duis ve ante the lemon sanleo nec feugiat erat hendrerit necuis ve ante.</p>
-                                        <div class="info">
-                                            <div class="author-img"> <img src="img/600x600.jpg" alt=""> </div>
-                                            <div class="cont">
-                                                <h6>Emily White</h6> <span>Armada Owner</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="item"> <span class="quote">
-                                            <img src="img/quot.png" alt="">
-                                        </span>
-                                        <p>Urban dapibus augue metus the nec feugiat erat hendrerit nec. Duis ve ante the lemon sanleo nec feugiat erat hendrerit necuis ve ante.</p>
-                                        <div class="info">
-                                            <div class="author-img"> <img src="img/600x600.jpg" alt=""> </div>
-                                            <div class="cont">
-                                                <h6>Jesica Smith</h6> <span>Alsa Manager</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>-->
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Clients -->
-        <!--<section class="clients">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-7 owl-carousel owl-theme">
-                        <div class="clients-logo">
-                            <a href="#0"><img src="img/clients/1.png" alt=""></a>
-                        </div>
-                        <div class="clients-logo">
-                            <a href="#0"><img src="img/clients/2.png" alt=""></a>
-                        </div>
-                        <div class="clients-logo">
-                            <a href="#0"><img src="img/clients/3.png" alt=""></a>
-                        </div>
-                        <div class="clients-logo">
-                            <a href="#0"><img src="img/clients/4.png" alt=""></a>
-                        </div>
-                        <div class="clients-logo">
-                            <a href="#0"><img src="img/clients/5.png" alt=""></a>
-                        </div>
-                        <div class="clients-logo">
-                            <a href="#0"><img src="img/clients/6.png" alt=""></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>-->
         <!-- Footer -->
         <footer class="main-footer dark">
             <div class="container">
