--- a/landscaping.html
+++ b/landscaping.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>B A U E N</title>
-    <link rel="shortcut icon" href="img/favicon.png" />
+    <title>MB Design Studio</title>
+    <link rel="shortcut icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="css/plugins.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://kit.fontawesome.com/c77e6f3bca.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,31 +24,46 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-        <!-- Logo -->
-        <a class="logo" href="index.html"> <img src="img/logo.png" alt=""> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="icon-bar"><i class="ti-line-double"></i></span> </button>
-        <!-- Navbar links -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link active" href="services.html">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                <li class="nav-item dropdown"> <span class="nav-link"> Pages <i class="ti-angle-down"></i></span>
-                    <ul class="dropdown-menu last">
-                        <li class="dropdown-item"><a href="pricing.html">Pricing</a></li>
-                        <li class="dropdown-item"><a href="team.html">Team</a></li>
-                        <li class="dropdown-item"><a href="testimonials.html">Testimonials</a></li>
-                        <li class="dropdown-item"><a href="faqs.html">Faqs</a></li>
-                        <li class="dropdown-item"><a href="gallery.html">Gallery</a></li>
-                        <li class="dropdown-item"><a href="video-gallery.html">Video Gallery</a></li>
-                        <li class="dropdown-item"><a href="not-found-404.html">404 Page</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-            </ul>
-        </div>
+            <!-- Logo -->
+            <a class="logo" href="index.html"> <img src="img/logo_white.png" style="width: 250px;"> </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="icon-bar"><i class="ti-line-double"></i></span> </button>
+            <!-- Navbar links -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item dropdown"><a class="nav-link active" href="services.html">Servicios <i class="ti-angle-down"></i></a>
+                        <ul class="dropdown-menu last">
+                            <li class="dropdown-item"><a href="interior-design.html">Interiorismo</a></li>
+                            <li class="dropdown-item active"><a href="landscaping.html">Paisajismo</a></li>
+                            <li class="dropdown-item"><a href="collections.html">Colecciones</a></li>
+                            <li class="dropdown-item"><a href="planning.html">Planing</a></li>
+                            <li class="dropdown-item"><a href="3d-modelling.html">Modelado 3D</a></li>
+                            <li class="dropdown-item"><a href="decor-plan.html">Decor Plan</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="art.html">Arte</a></li>
+                    <li class="nav-item dropdown"><a class="nav-link" href="projects.html">Proyectos <i class="ti-angle-down"></i></a>
+                        <ul class="dropdown-menu last">
+                            <li class="dropdown-item"><a href="interior-design-projects.html">Interiorismo</a></li>
+                            <li class="dropdown-item"><a href="landscaping-projects.html">Paisajismo</a></li>
+                            <li class="dropdown-item"><a href="collections-projects.html">Colecciones</a></li>
+                            <li class="dropdown-item"><a href="planing-projects.html">Planing</a></li>
+                            <li class="dropdown-item"><a href="3d-modelling-projects.html">Modelado 3D</a></li>
+                            <li class="dropdown-item"><a href="decor-plan-projects.html">Decor Plan</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown"><a class="nav-link" href="blog.html">Blog <i class="ti-angle-down"></i></a>
+                        <ul class="dropdown-menu last">
+                            <li class="dropdown-item"><a href="interior-design-blog.html">Diseño</a></li>
+                            <li class="dropdown-item"><a href="art-blog.html">Arte</a></li>
+                            <li class="dropdown-item"><a href="personal-blog.html">Personal</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
     <!-- Content -->
@@ -60,15 +76,15 @@
         </section>
         <!-- Header Banner -->
         <section class="banner-header banner-img valign bg-img bg-fixed" data-overlay-darkgray="5" data-background="img/1920x1128.jpg">
-            
-            
+
+
         </section>
         <!-- Services Page -->
         <section class="section-padding2">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="section-title2">Architecture</h2>
+                        <h2 class="section-title2">Paisajismo</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -97,6 +113,20 @@
                                     </div>
                                 </a>
                             </div>
+                            <div class="col-md-6 gallery-item">
+                                <a href="img/1100x750.jpg" title="Architecture" class="img-zoom">
+                                    <div class="gallery-box">
+                                        <div class="gallery-img"> <img src="img/1100x750.jpg" class="img-fluid mx-auto d-block" alt="work-img"> </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-md-6 gallery-item">
+                                <a href="img/1100x750.jpg" title="Architecture" class="img-zoom">
+                                    <div class="gallery-box">
+                                        <div class="gallery-img"> <img src="img/1100x750.jpg" class="img-fluid mx-auto d-block" alt="work-img"> </div>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-4 sidebar-side">
@@ -104,15 +134,31 @@
                             <div class="sidebar-widget services">
                                 <div class="widget-inner">
                                     <div class="sidebar-title">
-                                        <h4>All Services</h4>
+                                        <h4>Todos los Servicios</h4>
                                     </div>
                                     <ul>
-                                        <li class="active"><a href="architecture.html">Achitecture</a></li>
-                                        <li><a href="interior-design.html">Interior Design</a></li>
-                                        <li><a href="urban-design.html">Urban Design</a></li>
+                                        <li><a href="interior-design.html">Interiorismo</a></li>
+                                        <li class="active"><a href="landscaping.html">Paisajismo</a></li>
+                                        <li><a href="collections.html">Colecciones</a></li>
                                         <li><a href="planning.html">Planning</a></li>
-                                        <li><a href="3d-modelling.html">3D Modelling</a></li>
+                                        <li><a href="3d-modelling.html">Modelado 3D</a></li>
                                         <li><a href="decor-plan.html">Decor Plan</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </aside>
+                        <aside class="sidebar blog-sidebar mt-50">
+                            <div class="sidebar-widget services">
+                                <div class="widget-inner">
+                                    <div class="sidebar-title">
+                                        <h4>Proyectos de Paisajismo</h4>
+                                    </div>
+                                    <ul>
+                                        <li><a href="armada-center.html">Chile</a></li>
+                                        <li><a href="cotton-house.html">Devoto</a></li>
+                                        <li><a href="prime-hotel.html">Fouba</a></li>
+                                        <li><a href="stonya-villa.html">Adrogue</a></li>
+                                        <li><a href="landscaping-projects.html">Ver Todos</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -123,6 +169,14 @@
             </div>
         </section>
         <!-- Footer -->
+        <section class="testimonials">
+            <div class="background bg-img bg-fixed section-padding pb-0" data-background="img/1920x1128.jpg" data-overlay-dark="3">
+                <div class="container">
+                    <div class="row justify-content-center">
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer class="main-footer dark">
             <div class="container">
                 <div class="row">
